changes to formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "*.tcc": "cpp",
         "iosfwd": "cpp",
         "vector": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "string_view": "cpp"
     }
 }
